--- a/price.html
+++ b/price.html
@@ -1,3 +1,4 @@
+<!-- Created by Stephane Sumo -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -11,7 +12,7 @@
 		<img src="images/home-banner.jpg" alt="image">
 		<div id="navbar">
 			<ul>
-				<li id="left">MartheSumo</li>
+				<li id="left">StephSumo</li>
 				<li id="left"><a href="index.html">HOME</a></li>
 				<li id="left"><a href="#">ABOUT US</a></li>
 				<li><a href="price.html">PRICE</a></li>
@@ -30,7 +31,7 @@
 
 	<div id="footer">
 		<img src="images/IGEM_banner.jpg" alt="image" id="img2">	
-		<p><a href="#">MartheSumo - Copyright 2018/2019</a></p>	
+		<p><a href="#">StephSumo - Copyright 2018/2019</a></p>	
 	</div>
 </body>
 </html>
